// ======================================================
// PLANNING ENGINE
// LOGICAL / BUSINESS MODEL
//
// Purpose:
// Transform customer demand into workload requirements
// and calculate available capacity.
//
// This layer is NOT consumed directly by Power BI.
//
// ======================================================


// ======================================================
// INPUT TABLES
// ======================================================

Table raw_masterplan {

  project_number varchar [pk]

  project_name varchar

  combination_id integer

  need_date date
}

Table raw_roster {

  operator_id integer [pk]

  operator_name varchar

  workcenter_id integer

  shift_id integer
}


// ======================================================
// MASTER DATA
// ======================================================

Table dim_product_type {

  product_type_id integer [pk]

  product_type varchar
}

Table dim_production_stage {

  production_stage_id integer [pk]

  production_stage varchar
}

Table dim_combination {

  combination_id integer [pk]

  product_type_id integer

  production_stage_id integer
}

Table dim_workcenter {

  workcenter_id integer [pk]

  workcenter varchar

  daily_installed_capacity decimal
}

Table dim_shift {

  shift_id integer [pk]

  shift varchar

  workhours decimal

  breaks decimal

  efficiency decimal
}

Table dim_date {

  calendar_day date [pk]

  calendar_month integer

  calendar_year integer

  is_workday boolean

  is_holiday boolean
}


// ======================================================
// BUSINESS RULES
// ======================================================

Table leadtime_rules {

  combination_id integer [pk]

  leadtime_days integer
}

Table routing_hours {

  combination_id integer

  workcenter_id integer

  manned_hours decimal

  installed_hours decimal
}


// ======================================================
// WORKLOAD ENGINE
// ======================================================

Table vw_workload_detailed {

  project_number varchar

  combination_id integer

  workcenter_id integer

  need_date date

  internal_start_date date

  calendar_month integer

  calendar_year integer

  required_manned_hours decimal

  required_installed_hours decimal
}

Table vw_monthly_workload {

  calendar_month integer

  calendar_year integer

  project_number varchar

  combination_id integer

  workcenter_id integer

  required_manned_hours decimal

  required_installed_hours decimal
}


// ======================================================
// CAPACITY ENGINE
// ======================================================

Table vw_monthly_capacity {

  calendar_month integer

  calendar_year integer

  workcenter_id integer

  shift_id integer

  total_days integer

  workdays integer

  headcount integer

  manned_capacity decimal

  installed_capacity decimal
}


// ======================================================
// RELATIONSHIPS
// ======================================================

// Product Type -> Combination

Ref: "dim_product_type"."product_type_id" < "dim_combination"."product_type_id"

// Production Stage -> Combination

Ref: "dim_production_stage"."production_stage_id" < "dim_combination"."production_stage_id"

// Combination -> Master Plan

Ref: "dim_combination"."combination_id" < "raw_masterplan"."combination_id"

// Combination -> Business Rules

Ref: "dim_combination"."combination_id" < "leadtime_rules"."combination_id"

Ref: "dim_combination"."combination_id" < "routing_hours"."combination_id"

// Work Center -> Routing

Ref: "dim_workcenter"."workcenter_id" < "routing_hours"."workcenter_id"

// Workforce Structure

Ref: "dim_workcenter"."workcenter_id" < "raw_roster"."workcenter_id"

Ref: "dim_shift"."shift_id" < "raw_roster"."shift_id"

// Detailed Workload

Ref: "raw_masterplan"."project_number" < "vw_workload_detailed"."project_number"

Ref: "dim_combination"."combination_id" < "vw_workload_detailed"."combination_id"

Ref: "dim_workcenter"."workcenter_id" < "vw_workload_detailed"."workcenter_id"

// Monthly Workload
// Aggregated from vw_workload_detailed

Ref: "vw_workload_detailed"."project_number" < "vw_monthly_workload"."project_number"

Ref: "vw_workload_detailed"."combination_id" < "vw_monthly_workload"."combination_id"

Ref: "vw_workload_detailed"."workcenter_id" < "vw_monthly_workload"."workcenter_id"

// Monthly Capacity

Ref: "dim_workcenter"."workcenter_id" < "vw_monthly_capacity"."workcenter_id"

Ref: "dim_shift"."shift_id" < "vw_monthly_capacity"."shift_id"

// Calendar Dependencies

Ref: "dim_date"."calendar_day" < "vw_workload_detailed"."internal_start_date"

Ref: "dim_date"."calendar_month" < "vw_monthly_capacity"."calendar_month"

Ref: "dim_date"."calendar_year" < "vw_monthly_capacity"."calendar_year"

Ref: "vw_workload_detailed"."calendar_month" < "vw_monthly_workload"."calendar_month"

Ref: "vw_workload_detailed"."calendar_year" < "vw_monthly_workload"."calendar_year"